fix: Show full sidebar on mobile browsers correctly

--- a/assets/css/components/navigation.scss
+++ b/assets/css/components/navigation.scss
@@ -5,7 +5,7 @@
   width: $sidebar-width-expanded;
   overflow: hidden;
 
-  height: 100vh;
+  height: 100dvh;
 
   transition: 0.5s;
 
